syntax = "proto3";

package v2ray.core.transport.internet.tcp;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Tcp";
option go_package = "github.com/ghxhy/v2ray-core/v5/transport/internet/tcp";
option java_package = "com.v2ray.core.transport.internet.tcp";
option java_multiple_files = true;

import "google/protobuf/any.proto";
import "common/protoext/extensions.proto";

message Config {
  option (v2ray.core.common.protoext.message_opt).type = "transport";
  option (v2ray.core.common.protoext.message_opt).short_name = "tcp";
  option (v2ray.core.common.protoext.message_opt).allow_restricted_mode_load = true;


  reserved 1;
  google.protobuf.Any header_settings = 2;
  bool accept_proxy_protocol = 3;
}
